<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_range_myrange"
        style="@style/style_range_text3"
        android:text="@string/social_myshareno" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#dedfe1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/social_title"
            android:gravity="center"
            android:src="@drawable/man" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                style="@style/style_personal_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/style_personal_text"
                    android:text="@string/social_shareno"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_share_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:textColor="#3ECFAB"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#dedfe1" />

    <LinearLayout
        android:id="@+id/ll_clip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/social_copy_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/social_title"
            android:gravity="center"
            android:src="@drawable/share" />

        <TextView
            style="@style/style_personal_text"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/social_share" />

        <TextView
            style="@style/style_range_text3"
            android:text="@string/social_clickcopy" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginBottom="15dp"
        android:background="#dedfe1" />

    <TextView
        style="@style/style_range_text3"
        android:layout_marginTop="25dp"
        android:text="@string/social_addfriend" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/style_personal_text"
            android:text="@string/social_extractno" />

        <EditText
            android:id="@+id/social_edit"
            android:layout_width="@dimen/social_edit_width"
            android:layout_height="35dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/inputbox"
            android:hint="" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/social_add"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>