<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/theme_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/register_firstlayout_padding_bottom">


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="#dfdfdf" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_layout_height"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/register_layout_padding">

        <TextView
            style="@style/style_register_text"
            android:layout_marginLeft="20dp"
            android:text="@string/register_hint_account" />

        <EditText
            android:id="@+id/edittext_register_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/register_edit_account"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#dfdfdf" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/register_layout_height"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/register_layout_padding">

        <TextView
            style="@style/style_register_text"
            android:layout_marginLeft="20dp"
            android:text="@string/register_hint_pwd" />

        <EditText
            android:id="@+id/edittext_register_pwd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/edit_pwd"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#dfdfdf" />

    <!-- 登陆 -->
    <Button
        android:id="@+id/btn_login_login"
        style="@style/style_common_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/register_register_button_margin"
        android:padding="@dimen/register_register_button_padding"
        android:text="@string/register_title_register" />

</LinearLayout>